--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/react.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/logo/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <title>clément royer.</title>
   </head>
